5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4482/executions/1752_1525.log
== TEST (2019-05-16 17:13:23) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
	x= v+b-r
	if
	"quantos minutos"
	else
	"retirada"
-- ERROR:
File "XXXX", line 8
    if
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:27:25) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
	x=r-n+b
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x=r-n+b
NameError: name 'n' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:28:14) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
print x=r-v+b
	
-- ERROR:
File "XXXX", line 7
    print x=r-v+b
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:28:31) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
	x=r-v+b
-- ERROR:
File "XXXX", line 7
    print x=r-v+b
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:28:56) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
	x=r-v+b
-- EXECUTION TIME:
0.149958
-- TEST CASE 1:
---- input:
500
100
120
---- correct output:
0
---- user output:

-- TEST CASE 2:
---- input:
10000
2
5
---- correct output:
3000
---- user output:

-- TEST CASE 3:
---- input:
12000
50
150
---- correct output:
110
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:29:20) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
print r-v+b
-- ERROR:
File "XXXX", line 7
    print r-v+b
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:29:36) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
(print r-v+b)
-- ERROR:
File "XXXX", line 7
    (print r-v+b)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:29:44) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
(print ,r-v+b)
-- ERROR:
File "XXXX", line 7
    (print ,r-v+b)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:29:54) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
r-v+b
-- ERROR:
File "XXXX", line 7
    r-v+b
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:30:02) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
x = r-v+b
-- ERROR:
File "XXXX", line 7
    x = r-v+b
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:30:07) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
x=r-v+b
-- ERROR:
File "XXXX", line 7
    x=r-v+b
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:30:14) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
   x=r-v+b
-- ERROR:
File "XXXX", line 7
    x=r-v+b
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:30:42) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
   x=r-v+b
	print x=0
-- ERROR:
File "XXXX", line 8
    print x=0
            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:31:07) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
   x=r-v+b
	(x=0)
-- ERROR:
File "XXXX", line 8
    (x=0)
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:31:44) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
   x=r-v+b
	(0=0)
-- ERROR:
File "XXXX", line 8
    (0=0)
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:32:23) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
   x=r-v+b
	(x=m)
-- ERROR:
File "XXXX", line 8
    (x=m)
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:32:29) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
   x=r-v+b
	
-- ERROR:
File "XXXX", line 8
    (x=m)
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:32:49) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
   x=r-v+b
	
-- EXECUTION TIME:
0.161452
-- TEST CASE 1:
---- input:
500
100
120
---- correct output:
0
---- user output:

-- TEST CASE 2:
---- input:
10000
2
5
---- correct output:
3000
---- user output:

-- TEST CASE 3:
---- input:
12000
50
150
---- correct output:
110
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:34:12) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
   x=r-v+b
	m=0
-- ERROR:
File "XXXX", line 8
    m=0
      ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:34:21) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
   x=r-v+b
m=0
-- ERROR:
File "XXXX", line 8
    m=0
      ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:34:46) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
   x=r-v+b
m=0
-- ERROR:
File "XXXX", line 8
    m=0
      ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:35:01) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
   x=r-v+b
m=0
-- EXECUTION TIME:
0.162886
-- TEST CASE 1:
---- input:
500
100
120
---- correct output:
0
---- user output:

-- TEST CASE 2:
---- input:
10000
2
5
---- correct output:
3000
---- user output:

-- TEST CASE 3:
---- input:
12000
50
150
---- correct output:
110
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:35:18) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
   print = r-v+b
m=0
-- ERROR:
File "XXXX", line 8
    m=0
      ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:36:23) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
   print = r-v+b
m=0
-- ERROR:
File "XXXX", line 8
    m=0
      ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:37:30) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
   print = r-v*b
m=0
-- ERROR:
File "XXXX", line 8
    m=0
      ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:38:17) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
   print = r-v*b
	m=0
-- ERROR:
File "XXXX", line 8
    m=0
      ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:38:33) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
   print = r-v*b
m=0
-- ERROR:
File "XXXX", line 8
    m=0
      ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:39:44) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x=r-v*b
print (m)
-- ERROR:
File "XXXX", line 8
    m=0
      ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:40:07) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x=r-v*b
print (m)
-- EXECUTION TIME:
0.552313
-- TEST CASE 1:
---- input:
500
100
120
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
10000
2
5
---- correct output:
3000
---- user output:
0
-- TEST CASE 3:
---- input:
12000
50
150
---- correct output:
110
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:40:17) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x=r-v+b
print (m)
-- ERROR:
File "XXXX", line 8
    m=0
      ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:40:32) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x=r-v+b
print (m)
-- EXECUTION TIME:
0.516452
-- TEST CASE 1:
---- input:
500
100
120
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
10000
2
5
---- correct output:
3000
---- user output:
0
-- TEST CASE 3:
---- input:
12000
50
150
---- correct output:
110
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:41:10) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while m>=x: 
    x=r-v+b
print (m)
-- ERROR:
File "XXXX", line 8
    m=0
      ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:41:45) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x=r-v+b
print (x)
-- OUTPUT:
-280
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:42:04) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x=r-v+b
print (x)
-- EXECUTION TIME:
0.795924
-- TEST CASE 1:
---- input:
500
100
120
---- correct output:
0
---- user output:
-280
-- TEST CASE 2:
---- input:
10000
2
5
---- correct output:
3000
---- user output:
-9993
-- TEST CASE 3:
---- input:
12000
50
150
---- correct output:
110
---- user output:
-11800
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:42:31) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x=r-v+b
print (x,m)
-- OUTPUT:
-280 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:42:48) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x=r-v+b
print (x,m)
-- EXECUTION TIME:
0.507589
-- TEST CASE 1:
---- input:
500
100
120
---- correct output:
0
---- user output:
-280 0
-- TEST CASE 2:
---- input:
10000
2
5
---- correct output:
3000
---- user output:
-9993 0
-- TEST CASE 3:
---- input:
12000
50
150
---- correct output:
110
---- user output:
-11800 0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:43:12) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x=r-v+b/100
print (m)
-- OUTPUT:
-280 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:43:46) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x=r-v*b/100
print (m)
-- OUTPUT:
-280 0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:44:01) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x=r-v*b/100
print (m)
-- EXECUTION TIME:
0.87607
-- TEST CASE 1:
---- input:
500
100
120
---- correct output:
0
---- user output:
0
-- TEST CASE 2:
---- input:
10000
2
5
---- correct output:
3000
---- user output:
0
-- TEST CASE 3:
---- input:
12000
50
150
---- correct output:
110
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:44:23) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x=r-v*b/100
print (x)
-- OUTPUT:
-380.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:44:49) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x=r-v*b
print (x)
-- OUTPUT:
-49880
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:44:51) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x=r-v*b
print (x)
-- EXECUTION TIME:
0.660884
-- TEST CASE 1:
---- input:
500
100
120
---- correct output:
0
---- user output:
-49880
-- TEST CASE 2:
---- input:
10000
2
5
---- correct output:
3000
---- user output:
digite o volume inicial de agua: digite o bombeado para dentro: digite o que foi retirado p min: -19995
-- TEST CASE 3:
---- input:
12000
50
150
---- correct output:
110
---- user output:
digite o volume inicial de agua: digite o bombeado para dentro: digite o que foi retirado p min: -599850
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:45:59) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x=v*b-r
print (x)
-- OUTPUT:
-49880
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:47:23) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x=v-r+b
print (m)
-- OUTPUT:
-49880
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:47:49) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x=v-r+b
print (x)
-- OUTPUT:
-49880
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:48:55) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x = v - r + b
print (x)
-- OUTPUT:
-49880
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:49:19) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x = v - r + b =
print (x)
-- ERROR:
File "XXXX", line 7
    x = v - r + b =
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:49:52) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x = v - r + b
print (x)
print (m)
-- ERROR:
File "XXXX", line 7
    x = v - r + b =
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:50:12) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x = v - r * b
print (x)
print (m)
-- OUTPUT:
-11500
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:50:54) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x = v - r * b / m
print (x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = v - r * b / m
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:51:26) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x = v - r * b /100
print (x)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = v - r * b / m
ZeroDivisionError: division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:53:27) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x = v - r * b 
		if 
		m  "acumuladora"
		else "contadora"
print (x)

-- ERROR:
File "XXXX", line 8
    if 
      ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:53:42) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x = v - r * b 
		if 
		m  "acumuladora"
		else 
		x "contadora"
print (x)

-- ERROR:
File "XXXX", line 8
    if 
      ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:53:55) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x = v - r * b 
		
print (x)

-- OUTPUT:
-11500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:54:41) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x = v * b - r
print (x)

-- OUTPUT:
-11500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:55:31) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x = v * b - r
print (m)

-- OUTPUT:
-11500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:56:14) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x = v * b - r
print (m)
-- OUTPUT:
-11500
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:58:17) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x=v*b-r
print (x)
-- EXECUTION TIME:
708.11
-- TEST CASE 1:
---- input:
500
100
120
---- correct output:
0
---- user output:

-- TEST CASE 2:
---- input:
10000
2
5
---- correct output:
3000
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
12000
50
150
---- correct output:
110
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:58:17) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
   print = r-v+b
m=0
-- EXECUTION TIME:
1351.58
-- TEST CASE 1:
---- input:
500
100
120
---- correct output:
0
---- user output:

-- TEST CASE 2:
---- input:
10000
2
5
---- correct output:
3000
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
12000
50
150
---- correct output:
110
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:58:17) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x = v * b - r
print (m)
-- EXECUTION TIME:
95.041
-- TEST CASE 1:
---- input:
500
100
120
---- correct output:
0
---- user output:

-- TEST CASE 2:
---- input:
10000
2
5
---- correct output:
3000
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
12000
50
150
---- correct output:
110
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:58:17) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x = v - r * b /100
print (x)

-- EXECUTION TIME:
390.891
-- TEST CASE 1:
---- input:
500
100
120
---- correct output:
0
---- user output:

-- TEST CASE 2:
---- input:
10000
2
5
---- correct output:
3000
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
12000
50
150
---- correct output:
110
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:58:17) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
   print = r-v*b
m=0
-- EXECUTION TIME:
1222.54
-- TEST CASE 1:
---- input:
500
100
120
---- correct output:
0
---- user output:

-- TEST CASE 2:
---- input:
10000
2
5
---- correct output:
3000
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
12000
50
150
---- correct output:
110
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:58:17) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x = v - r * b
print (x)
print (m)
-- EXECUTION TIME:
1.0245
-- TEST CASE 1:
---- input:
500
100
120
---- correct output:
0
---- user output:
-11500
0
-- TEST CASE 2:
---- input:
10000
2
5
---- correct output:
3000
---- user output:

-- TEST CASE 3:
---- input:
12000
50
150
---- correct output:
110
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:58:18) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
   print = r-v+b
m=0
-- EXECUTION TIME:
1294.69
-- TEST CASE 1:
---- input:
500
100
120
---- correct output:
0
---- user output:

-- TEST CASE 2:
---- input:
10000
2
5
---- correct output:
3000
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
12000
50
150
---- correct output:
110
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:58:18) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x = v * b - r
print (x)

-- EXECUTION TIME:
181.888
-- TEST CASE 1:
---- input:
500
100
120
---- correct output:
0
---- user output:

-- TEST CASE 2:
---- input:
10000
2
5
---- correct output:
3000
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
12000
50
150
---- correct output:
110
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:58:18) 
-- CODE:
v = int(input("digite o volume inicial de agua: "))
b = int(input("digite o bombeado para dentro: "))
r = int(input("digite o que foi retirado p min: "))
x=0
m=0
while x>=m: 
    x=v-r+b
print (x)
-- EXECUTION TIME:
585.668
-- TEST CASE 1:
---- input:
500
100
120
---- correct output:
0
---- user output:

-- TEST CASE 2:
---- input:
10000
2
5
---- correct output:
3000
---- user output:

-- TEST CASE 3:
---- input:
12000
50
150
---- correct output:
110
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
